DefaultGlobalModel now maintains its list of documents in a DefaultListModel, and the GlobalModel interface returns this list as a non-mutable ListModel.  Also, the GUI now depends on SingleDisplayModel for all of its state and logic. SingleDisplayModel is now a subclass of DefaultGlobalModel, rather than using the decorator pattern.
git-svn-id: file:///tmp/test-svn/trunk@351 fe72c1cf-3628-48e9-8b72-1c46755d3cff